# smart-bill

./: .env.example  .env.production  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/update-docs/: SKILL.md
.claude/skills/update-docs/evals/: evals.json
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  auth.py  bills.py  categories.py  routes.py  users.py
backend/core/: __init__.py  enums.py  exceptions.py  models.py
backend/database/: __init__.py  crud.py  db.py  models.py  seed.py
backend/services/: __init__.py  auth_service.py  bill_parser.py  bill_processor.py  prompts.py  qwen_vision.py
backend/utils/: __init__.py  converters.py  logger.py  validators.py
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  SETUP.md
frontend/web/: .env.example  .env.remote  .versionrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/web/.husky/: commit-msg  pre-push
frontend/web/src/: App.vue  main.ts
frontend/web/src/api/: auth.ts  bills.ts  categories.ts  client.ts  users.ts
frontend/web/src/components/bills/: BillCard.vue  BillEditModal.vue  BillFilters.vue  BillUploadModal.vue
frontend/web/src/components/categories/: CategoryDrillDown.vue  CategoryNodeRow.vue  CategoryTreeSelect.vue
frontend/web/src/components/common/: ConfirmDialog.vue  DateRangePicker.vue  Toast.vue
frontend/web/src/pages/: CategoriesPage.vue  DashboardPage.vue  ForceChangePasswordPage.vue  LoginPage.vue  SettingsPage.vue  StatsPage.vue  UserPage.vue  UsersAdminPage.vue
frontend/web/src/router/: index.ts
frontend/web/src/stores/: auth.ts  bills.ts  categories.ts  stats.ts  ui.ts
frontend/web/src/styles/: main.css
frontend/web/src/types/: bill.ts
frontend/web/src/utils/: cycle.ts  excel.ts  useDevice.ts
scripts/: deploy.sh  deploy_frontend.sh  migrate_categories_tree.py  migrate_user_system.py  restart.sh
(+3 files in other folders)
