[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-bill"
version = "0.1.0"
description = "Smart bill recognition service using Qwen3-VL-Plus vision model"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "dashscope>=1.5.0",
    "python-multipart>=0.0.6",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
